@@ -27,6 +27,24 @@ compression libraries.
 
 =back
 
+=head1 Class Methods
+
+=head2 gzip
+
+C<static method gzip : void ($input : string, $output_ref : string[], $options : object[] = undef);>
+
+Compresses $input and outputs to $output_ref->[0] with the option $options.
+
+C<AppendOutput> and C<WindowBits> options are set appropriately.
+
+=head2 gunzip
+
+C<static method gunzip : void ($input : string, $output_ref : string[], $options : object[] = undef);>
+
+Uncompresses $input and outputs to $output_ref->[0] with the option $options.
+
+C<AppendOutput> and C<WindowBits> options are set appropriately.
+
 =head1 Repository
 
 L<SPVM::Compress::Raw::Zlib - Github|https://github.com/yuki-kimoto/SPVM-Compress-Raw-Zlib>
