@@ -3,6 +3,9 @@
     * Require SPVM::Resource::Zlib 1.004.
   [New Features]
     * Add AppendOutput option to Compress::Raw::Zlib::Deflate#new and Compress::Raw::Zlib::Inflate#new methods.
+    * Add Compress::Raw::Zlib#gzip method.
+    * Add Compress::Raw::Zlib#gunzip method.
+    
 0.002 2025-09-01
   [Changes]
     * Fix a lot of bugs. Add the documents. Add the tests.
